--- a/style.css
+++ b/style.css
@@ -598,3 +598,63 @@ source https://www.w3schools.com/howto/howto_css_image_center.asp
 }
 
 /* End Owner: Parkavi Shanmugam */
+
+
+/*
+Owner: Helen Plesko
+Date: April 10, 2024
+*/
+/* Customization of problem statement heading 2 text */
+.problemstatement h2 {
+    font-family: Helvetica, sans-serif;
+    color: #000000;
+    font-weight: bold;
+    font-size:30px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+	text-align: center;
+}
+/* Customization of problem statement heading 3 text */
+.problemstatement h3 {
+    font-family: Helvetica, sans-serif;
+    color: #000000;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    flex: 0 0 100%;
+	text-align: center;
+}
+/* Customization of problem statement paragraph text */
+.problemstatement p { 
+    font-family: Helvetica, sans-serif;
+    color: #000000;
+    font-weight: normal;
+    font-size:18px;
+	text-align: center;
+}
+
+/* Customization of dividing lines */
+hr.rounded {
+	border-radius: 6px;
+	border-top: 3px solid #000;
+	margin: 25px;
+}
+
+/* Customization of footer background */
+footer {
+	position: static;
+	background-color: #000;
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+/* Customization of footer p element */
+.footertext p {
+	color: #FFF;
+	text-align: center;
+	font-weight: normal;
+	font-size: 13px;
+	font-family: helvetica, arial, sans-serif;
+}
+/* End Owner: Helen Plesko */
