--- a/style.css
+++ b/style.css
@@ -473,10 +473,10 @@ source https://www.w3schools.com/howto/howto_css_image_center.asp
 
 #landing-Header {
     font-family: Helvetica, sans-serif;
-    color: #02222b;
+    color: #000;
     font-size: 55px;
-    font-weight: normal;
-    text-shadow: 3px 3px #e9c7c7;
+    font-weight: bold;
+    text-shadow: 3px 3px #fff;
     padding: 0px;
 }
 
